--- a/Python Numpy and Pandas.ipynb
+++ b/Python Numpy and Pandas.ipynb
@@ -452,11 +452,142 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "var_b=\n",
+      " [[ 2  9 16]\n",
+      " [ 4 14 19]\n",
+      " [11 18 19]]\n",
+      "var_c =  [ 2  9 16  4 14 19 11 18 19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#converting a multi dimensional array to a single dimensional array\n",
+    "print(\"var_b=\\n\",var_b)\n",
+    "var_c = var_b.ravel()\n",
+    "print(\"var_c = \",var_c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  9]\n",
+      " [16  4]\n",
+      " [14 19]\n",
+      " [11 18]\n",
+      " [19  2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "var_d = np.resize(var_c,(5,2))\n",
+    "print(var_d)\n",
+    "#note : here var_c had only 9 elements. when we reshared it to 5x2 it required 10 elements, \n",
+    "# in this case it reuse or loop through the elements of the source"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  9 16]\n",
+      " [ 4 14 19]\n",
+      " [11 18 19]\n",
+      " [ 2  9 16]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#one more example\n",
+    "var_e = np.resize(var_c,(4,3))\n",
+    "print(var_e)\n",
+    "#it is seen that the first row is repeated again"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "\n"
+    "Stacking array together\n",
+    "vstack -> vertical stack\n",
+    "hstack -> horizontal stack\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stk_a=\n",
+      " [[1 2]\n",
+      " [3 4]] \n",
+      "stk_b=\n",
+      " [[4 5]\n",
+      " [6 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "stk_a =np.arange(1,5).reshape(2,2)\n",
+    "stk_b= np.arange(4,8).reshape(2,2)\n",
+    "\n",
+    "print(\"stk_a=\\n\",stk_a,\"\\nstk_b=\\n\",stk_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [4 5]\n",
+      " [6 7]]\n",
+      "\n",
+      "\n",
+      "[[1 2 4 5]\n",
+      " [3 4 6 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "stk_vs=np.vstack((stk_a,stk_b))\n",
+    "print(stk_vs)\n",
+    "print(\"\\n\")\n",
+    "stk_hs=np.hstack((stk_a,stk_b))\n",
+    "print(stk_hs)"
    ]
   },
   {
@@ -468,59 +599,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shallow_a [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14]\n",
+      "shallow_b [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14]\n",
+      "updating value of 5th element of shallow_b to 99\n",
+      "\n",
+      "shallow_b [ 1  2  3  4 99  6  7  8  9 10 11 12 13 14] \n",
+      "The change was expected\n",
+      "\n",
+      "shallow_a [ 1  2  3  4 99  6  7  8  9 10 11 12 13 14] \n",
+      "The change was un-expected\n",
+      "\n",
+      "inshort a=b kind of assignment is similar to an alias and technically they are the same.\n",
+      "this kind of copy is called shallow copy\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Shallow copy and deep copy\n",
+    "shallow_a = np.arange(1,15)\n",
+    "print(\"shallow_a\",shallow_a)\n",
+    "shallow_b = shallow_a\n",
+    "print(\"shallow_b\", shallow_b)\n",
+    "\n",
+    "print(\"updating value of 5th element of shallow_b to 99\\n\")\n",
+    "shallow_b[4]=99\n",
+    "\n",
+    "print(\"shallow_b\", shallow_b, \"\\nThe change was expected\\n\") \n",
+    "\n",
+    "print(\"shallow_a\",shallow_a,\"\\nThe change was un-expected\\n\")\n",
+    "\n",
+    "print(\"inshort a=b kind of assignment is similar to an alias and technically they are the same.\")\n",
+    "print(\"this kind of copy is called shallow copy\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deep_a [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14] \n",
+      "\n",
+      "deep_b [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14] \n",
+      "\n",
+      "updating value of 5th element of deep_b to 99\n",
+      "\n",
+      "deep_b [ 1  2  3  4 99  6  7  8  9 10 11 12 13 14] \n",
+      "The change was expected\n",
+      "\n",
+      "deep_a [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14] \n",
+      " no change, as expected\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Deep Copy\n",
+    "deep_a = np.arange(1,15)\n",
+    "print(\"deep_a\",deep_a,\"\\n\")\n",
+    "deep_b = deep_a.copy()\n",
+    "print(\"deep_b\",deep_b,\"\\n\")\n",
+    "\n",
+    "print(\"updating value of 5th element of deep_b to 99\\n\")\n",
+    "deep_b[4]=99\n",
+    "\n",
+    "print(\"deep_b\", deep_b, \"\\nThe change was expected\\n\") \n",
+    "\n",
+    "print(\"deep_a\",deep_a,\"\\n no change, as expected\\n\")"
+   ]
   },
   {
    "cell_type": "code",
