--- a/Python Numpy and Pandas.ipynb
+++ b/Python Numpy and Pandas.ipynb
@@ -16,6 +16,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Refferences\n",
+    "https://www.pluralsight.com/guides/overview-basic-numpy-operations"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -686,11 +701,163 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Why Numpy over python list?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 1) The numpy list is smaller in size thus faster!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import sys\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "python list size : 1456\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Python list\n",
+    "pyt_lst =list(range(1,151))  ### creating a list with elemetns from 1 to 150\n",
+    "print(\"\\npython list size :\",sys.getsizeof(pyt_lst))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "numpy list size: 696\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Numpy list\n",
+    "npy_lst =np.arange(1,151,1) ### creating a list with elemetns from 1 to 150\n",
+    "print(\"\\nnumpy list size:\",sys.getsizeof(npy_lst))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(Si_n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2) Simpler calculations "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "height = [1.72,1.65,1.66,1.78,1.9]\n",
+    "weight = [75,54,62,74,80]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25.351541373715524\n",
+      "19.834710743801654\n",
+      "22.49963710262738\n",
+      "23.355636914530994\n",
+      "22.1606648199446\n"
+     ]
+    }
+   ],
+   "source": [
+    "# BMI = height in Weight/(height^2(in meters))\n",
+    "#\n",
+    "#weight/height**2  ==> this code will fail\n",
+    "#\n",
+    "for i in range (0,len(height),1) :\n",
+    "    print(weight[i]/height[i]**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[25.35154137 19.83471074 22.4996371  23.35563691 22.16066482]\n"
+     ]
+    }
+   ],
+   "source": [
+    "npy_height = np.array(height)\n",
+    "npy_weight = np.array(weight)\n",
+    "\n",
+    "print(npy_weight/(npy_height**2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Here you could skip all those looping statemetns just by using numpy lists"
+   ]
   },
   {
    "cell_type": "code",
@@ -700,102 +867,49 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##### Some Points to remember"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pyt_lst2 = [1,\"a\",3.14,True]\n",
+    "npy_lst2 = np.array([1,\"a\",3.14,True])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pyt_lst2 =  [1, 'a', 3.14, True] \n",
+      "\n",
+      "npy_lst2 =  ['1' 'a' '3.14' 'True']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"pyt_lst2 = \",pyt_lst2,\"\\n\")\n",
+    "print(\"npy_lst2 = \",npy_lst2)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Here python list mainitains the input data type as it is, but <br> \n",
+    "numpy converts all into a common data type, here all as string"
+   ]
   },
   {
    "cell_type": "code",
