--- a/Python Numpy and Pandas.ipynb
+++ b/Python Numpy and Pandas.ipynb
@@ -48,6 +48,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Numpy is a collection of elemnts of same data type. <br> where as its compateation python list can hold elements of any data type."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -112,11 +119,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 1,  3, 19, 22],\n",
-       "       [21, 23, 15,  3],\n",
-       "       [13, 12,  5, 13],\n",
-       "       [19, 24,  8, 22],\n",
-       "       [22, 17,  2,  8]])"
+       "array([[20, 12, 14, 22],\n",
+       "       [ 7,  8, 24, 11],\n",
+       "       [ 2,  5,  3, 15],\n",
+       "       [ 1, 22, 16,  4],\n",
+       "       [19,  4, 14,  6]])"
       ]
      },
      "execution_count": 4,
@@ -228,6 +235,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[ 1.          3.71428571  6.42857143  9.14285714 11.85714286 14.57142857\n",
+      " 17.28571429 20.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#printing 8 values between 1 to 20\n",
+    "print(np.linspace(1,20,8)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[[ 0  1  2  3  4]\n",
       " [ 5  6  7  8  9]\n",
       " [10 11 12 13 14]] \n",
@@ -247,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -278,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -361,19 +387,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.85374136, 0.13403774, 0.98709326],\n",
-       "       [0.08175941, 0.30542141, 0.86909431],\n",
-       "       [0.37364276, 0.39561665, 0.84698197],\n",
-       "       [0.60926562, 0.84312484, 0.87220521]])"
+       "array([[0.96160436, 0.78976135, 0.20607104],\n",
+       "       [0.45901308, 0.46272467, 0.10469185],\n",
+       "       [0.98549226, 0.54564723, 0.30238737],\n",
+       "       [0.20221455, 0.08824976, 0.18688396]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -418,16 +444,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[18 11 19]\n",
-      " [ 4 14 19]\n",
-      " [ 2 16  9]]\n"
+      "[[ 3  7 17]\n",
+      " [ 9 19 14]\n",
+      " [12 16 18]]\n"
      ]
     }
    ],
@@ -438,20 +464,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sum of Columns [17 41 54]\n",
-      "Sum of Rows [27 37 48]\n",
+      "Sum of Columns [24 42 49]\n",
+      "Sum of Rows [27 42 46]\n",
       "Max value 19\n",
-      "Total sum 112\n",
-      "Minimum value 2\n",
-      "Mean value 12.444444444444445\n",
-      "Standard deviation 6.020540970730696\n"
+      "Total sum 115\n",
+      "Minimum value 3\n",
+      "Mean value 12.777777777777779\n",
+      "Standard deviation 5.159194118330622\n"
      ]
     }
    ],
@@ -467,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -475,10 +501,10 @@
      "output_type": "stream",
      "text": [
       "var_b=\n",
-      " [[ 2  9 16]\n",
-      " [ 4 14 19]\n",
-      " [11 18 19]]\n",
-      "var_c =  [ 2  9 16  4 14 19 11 18 19]\n"
+      " [[ 3  7 17]\n",
+      " [ 9 19 14]\n",
+      " [12 16 18]]\n",
+      "var_c =  [ 3  7 17  9 19 14 12 16 18]\n"
      ]
     }
    ],
@@ -491,18 +517,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2  9]\n",
-      " [16  4]\n",
-      " [14 19]\n",
-      " [11 18]\n",
-      " [19  2]]\n"
+      "[[ 3  7]\n",
+      " [17  9]\n",
+      " [19 14]\n",
+      " [12 16]\n",
+      " [18  3]]\n"
      ]
     }
    ],
@@ -515,17 +541,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2  9 16]\n",
-      " [ 4 14 19]\n",
-      " [11 18 19]\n",
-      " [ 2  9 16]]\n"
+      "[[ 3  7 17]\n",
+      " [ 9 19 14]\n",
+      " [12 16 18]\n",
+      " [ 3  7 17]]\n"
      ]
     }
    ],
@@ -554,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -765,26 +791,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "numpy.ndarray"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(Si_n)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -798,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -920,10 +926,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "height+weight = [1.72, 1.65, 1.66, 1.78, 1.9, 75, 54, 62, 74, 80]\n",
+      "npy_height+npy_weight = [76.72 55.65 63.66 75.78 81.9 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"height+weight =\",height+weight)\n",
+    "print(\"npy_height+npy_weight =\",npy_height+npy_weight)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here in regular list + function results in concatenation <br>\n",
+    "where as in npy_lists it results in element wise addition."
+   ]
   },
   {
    "cell_type": "code",
@@ -931,6 +957,68 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A question , we have the following data, \n",
+      "height =  [1.72, 1.65, 1.66, 1.78, 1.9] \n",
+      " weight = [75, 54, 62, 74, 80]\n",
+      "Question : how to find the weight of people of height 1.75m and above?\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"A question , we have the following data, \")\n",
+    "print(\"height = \", height, \"\\n\", \"weight =\",weight )\n",
+    "print(\"Question : how to find the weight of people of height 1.75m and above?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False,  True,  True])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "npy_height > 1.75"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([74, 80])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "npy_weight[npy_height>1.75]"
+   ]
   },
   {
    "cell_type": "code",
