--- a/Python Pandas.ipynb
+++ b/Python Pandas.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python Package : Pandas"
+    "# Python Package : Pandas  --> incomplete/Ongoing"
    ]
   },
   {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,17 +86,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1.0\n",
+       "1    2.0\n",
+       "2    3.0\n",
+       "3    4.0\n",
+       "4    5.0\n",
+       "5    6.0\n",
+       "6    NaN\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#creating a pandas serires\n",
-    "pds_1 = pd.Series([1,2,3,4,5,6,np.nan])\n"
+    "pds_1 = pd.Series([1,2,3,4,5,6,np.nan])\n",
+    "pds_1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +167,7 @@
        "              dtype='datetime64[ns]', freq='W-MON')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -185,23 +204,23 @@
      "output_type": "stream",
      "text": [
       "                   A         B         C         D\n",
-      "2020-06-22 -1.673489  2.396230 -0.264467 -0.332857\n",
-      "2020-06-29 -0.985818 -1.148629  0.708260 -0.604694\n",
-      "2020-07-06  0.732387  1.593619 -1.123013  0.068043\n",
-      "2020-07-13 -0.108881  0.845704  1.798759  1.872115\n",
-      "2020-07-20 -0.537952 -0.435917 -2.110606 -1.570541\n",
-      "2020-07-27  0.828437  0.304024  0.678605  0.438846\n",
-      "2020-08-03  1.965351  0.626829 -1.094601 -0.101592\n",
+      "2020-06-22 -1.658151  1.190667 -0.910104  0.591804\n",
+      "2020-06-29 -0.016784 -0.439309 -1.450324 -0.285418\n",
+      "2020-07-06  0.067929 -0.002301 -2.202311  0.992971\n",
+      "2020-07-13  0.926093 -0.041955 -0.436063 -0.910181\n",
+      "2020-07-20  1.938488 -0.192488  2.131447 -0.965367\n",
+      "2020-07-27 -0.788416  0.981249 -0.080653  0.219150\n",
+      "2020-08-03  1.259946  0.002680  0.203290  0.209012\n",
       "\n",
       "\n",
       "             A   B   C   D\n",
-      "2020-06-22  13  40   4  13\n",
-      "2020-06-29  44  13   9  35\n",
-      "2020-07-06  41  21  18  23\n",
-      "2020-07-13  14  28  27  37\n",
-      "2020-07-20   5  37  38  21\n",
-      "2020-07-27   5  35  28  32\n",
-      "2020-08-03   3  33  21  40\n"
+      "2020-06-22   4  13  10  13\n",
+      "2020-06-29  24  35  19  21\n",
+      "2020-07-06   2  17   3  26\n",
+      "2020-07-13  34  13  29  32\n",
+      "2020-07-20  26  24   7  18\n",
+      "2020-07-27  10  32  24  29\n",
+      "2020-08-03  29  37  26  27\n"
      ]
     }
    ],
@@ -223,10 +242,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "      <th>E</th>\n",
+       "      <th>F</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2020-06-18</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Pandas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2020-06-18</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Pandas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2020-06-18</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Pandas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2020-06-18</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Pandas</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   A          B    C  D      E       F\n",
+       "0  1 2020-06-18  1.0  5   True  Pandas\n",
+       "1  2 2020-06-18  1.0  5  False  Pandas\n",
+       "2  3 2020-06-18  1.0  5   True  Pandas\n",
+       "3  4 2020-06-18  1.0  5   True  Pandas"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Creating a data frame from a dictionary\n",
+    "df_3 = pd.DataFrame({ 'A' : [1,2,3,4],\n",
+    "                      'B' : pd.Timestamp('20200618'),\n",
+    "                      'C' : pd.Series(1,index=list(range(4)),dtype=\"float32\"),\n",
+    "                      'D' : np.array([5]*4,dtype='int32'),\n",
+    "                      'E' : pd.Categorical(['True','False','True','True']),\n",
+    "                      'F' : 'Pandas'})\n",
+    "\n",
+    "df_3"
+   ]
   }
  ],
  "metadata": {
