--- a/Python Pandas.ipynb
+++ b/Python Pandas.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python Package : Pandas  --> In Progress"
+    "# Python Package : Pandas"
    ]
   },
   {
