--- a/001_Python_Basics/Python From The Basics .ipynb
+++ b/001_Python_Basics/Python From The Basics .ipynb
@@ -55,16 +55,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello. \n",
-      "How are you?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Hello. \\nHow are you?\")"
    ]
@@ -195,10 +186,10 @@
      "output_type": "stream",
      "text": [
       "Enter First Name\n",
-      "Sanju\n",
+      "Darshan\n",
       "\n",
       "Enter Last Name\n",
-      "Sreenath\n"
+      "S\n"
      ]
     }
    ],
@@ -219,7 +210,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sanju Sreenath\n"
+      "Darshan S\n"
      ]
     }
    ],
@@ -236,7 +227,7 @@
     {
      "data": {
       "text/plain": [
-       "'SanjuSanjuSanju'"
+       "'DarshanDarshanDarshan'"
       ]
      },
      "execution_count": 7,
@@ -257,7 +248,7 @@
     {
      "data": {
       "text/plain": [
-       "'Sanju_Sreenath_Sanju_Sreenath_Sanju_Sreenath_'"
+       "'Darshan_S_Darshan_S_Darshan_S_'"
       ]
      },
      "execution_count": 8,
@@ -352,11 +343,11 @@
      "output_type": "stream",
      "text": [
       "What is your name?\n",
-      "Darshan\n",
-      "It is good to meet you, Darshan\n",
-      "It is good to meet you,  Darshan\n",
-      "Hi i'm Darshan, It is good to meet you, Sanju Sreenath\n",
-      "Hi i'm Sanju Sreenath, It is good to meet you, Darshan\n"
+      "Sanju\n",
+      "It is good to meet you, Sanju\n",
+      "It is good to meet you,  Sanju\n",
+      "Hi i'm Sanju, It is good to meet you, Darshan S\n",
+      "Hi i'm Darshan S, It is good to meet you, Sanju\n"
      ]
     }
    ],
@@ -386,7 +377,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Darshan\n"
+      "Sanju\n"
      ]
     },
     {
@@ -592,10 +583,10 @@
      "output_type": "stream",
      "text": [
       "enter a sample number\n",
-      "58\n",
-      "ogiginal inc 58\n",
-      "updated/incremented inc 61\n",
-      "updated/decremented inc 56\n"
+      "85\n",
+      "ogiginal inc 85\n",
+      "updated/incremented inc 88\n",
+      "updated/decremented inc 83\n"
      ]
     }
    ],
@@ -1378,7 +1369,7 @@
      "output_type": "stream",
      "text": [
       "enter a value for score between 0-100\n",
-      "87\n"
+      "75\n"
      ]
     }
    ],
@@ -1397,7 +1388,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Distinction\n"
+      "First Class\n"
      ]
     }
    ],
@@ -1972,13 +1963,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world\n"
+      "hello there how are you?\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['hello', 'world']"
+       "['hello', 'there', 'how', 'are', 'you?']"
       ]
      },
      "execution_count": 66,
@@ -2147,7 +2138,10 @@
     "lst_fncts=[]\n",
     "for i in range(1,5):\n",
     "    lst_fncts= list(map(lambda x:x(i),funct))\n",
-    "    print(lst_fncts)    "
+    "    print(lst_fncts)    \n",
+    "    \n",
+    "## here number 1 to 5 are genereated as part of range\n",
+    "## then list \"funct\" has 2 custom functions, and the numbers generated is passed to both the custom functions\n"
    ]
   },
   {
@@ -2221,7 +2215,7 @@
     {
      "data": {
       "text/plain": [
-       "55"
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
       ]
      },
      "execution_count": 76,
@@ -2230,9 +2224,30 @@
     }
    ],
    "source": [
+    "my_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "#using my_list from above\n",
     "#function to add all the elements of the list\n",
-    "ft.reduce(lambda a,b : a+b , my_list)  "
+    "ft.reduce(lambda a,b : a+b , my_list)  \n",
+    "#its equivalent of 1+2+3+4+5+6+7+8+9+0"
    ]
   },
   {
@@ -2247,7 +2262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2258,7 +2273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -2267,7 +2282,7 @@
        "77"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2301,14 +2316,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Person object at 0x000001D0E3FC4E08>\n"
+      "<__main__.Person object at 0x000001E900B06D48>\n"
      ]
     }
    ],
@@ -2328,7 +2343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -2345,7 +2360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -2387,7 +2402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2396,7 +2411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2412,7 +2427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -2432,7 +2447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -2454,7 +2469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2467,7 +2482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -2484,7 +2499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2497,7 +2512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
