--- a/Class_and_Objects.ipynb
+++ b/Class_and_Objects.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNFVkAqaHqFIasPoGwvmjoe",
+      "authorship_tag": "ABX9TyPv11pi3I+7DYrs6sU4noeb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,12 +37,56 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class Robot:\n",
+        "    def __init__ (self,name,colour,weight):\n",
+        "      self.name =name\n",
+        "      self.colour = colour\n",
+        "      self.weight = weight\n",
+        "\n",
+        "    def introduce_self(self) :\n",
+        "      print(\"hello My name is \"+ self.name+ \", I'm in \"+ self.colour+\" colour and of \"+self.weight + \"Kg weight!\")"
+      ],
       "metadata": {
         "id": "rzt-X6hz0fWV"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "DSK1 = Robot(\"Tom\",\"Red\",\"30\")\n",
+        "DSK2 = Robot(\"Jerry\",\"Blue\",\"40\")"
+      ],
+      "metadata": {
+        "id": "cdlzazSq2t7o"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "DSK1.introduce_self()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S0S9pJKy3DLJ",
+        "outputId": "5e0e4033-d31c-49bf-ed1d-2e050c87585c"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello My name is Tom, I'm in Red colour and of 30Kg weight!\n"
+          ]
+        }
+      ]
     }
   ]
 }
