updated one more example

--- a/Class_and_Objects.ipynb
+++ b/Class_and_Objects.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPv11pi3I+7DYrs6sU4noeb",
+      "authorship_tag": "ABX9TyO9dSJRy7+zgE99CPgrOylP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,12 +45,15 @@
         "      self.weight = weight\n",
         "\n",
         "    def introduce_self(self) :\n",
-        "      print(\"hello My name is \"+ self.name+ \", I'm in \"+ self.colour+\" colour and of \"+self.weight + \"Kg weight!\")"
+        "      print(\"hello My name is \"+ self.name+ \", I'm in \"+ self.colour+\" colour and of \"+self.weight + \"Kg weight!\")\n",
+        "\n",
+        "    def simple_introduce(self):\n",
+        "      print(\"hello My name is \"+ self.name)"
       ],
       "metadata": {
         "id": "rzt-X6hz0fWV"
       },
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -62,28 +65,30 @@
       "metadata": {
         "id": "cdlzazSq2t7o"
       },
-      "execution_count": 12,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "DSK1.introduce_self()"
+        "DSK1.introduce_self()\n",
+        "DSK2.simple_introduce()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "S0S9pJKy3DLJ",
-        "outputId": "5e0e4033-d31c-49bf-ed1d-2e050c87585c"
+        "outputId": "e9ee60a5-9c53-4742-9680-e3f8655fa480"
       },
-      "execution_count": 13,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "hello My name is Tom, I'm in Red colour and of 30Kg weight!\n"
+            "hello My name is Tom, I'm in Red colour and of 30Kg weight!\n",
+            "hello My name is Jerry\n"
           ]
         }
       ]
