--- a/Class_and_Objects.ipynb
+++ b/Class_and_Objects.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO9dSJRy7+zgE99CPgrOylP",
+      "authorship_tag": "ABX9TyMHkI4P74PGz3t4urZ8Rw6T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,12 +48,19 @@
         "      print(\"hello My name is \"+ self.name+ \", I'm in \"+ self.colour+\" colour and of \"+self.weight + \"Kg weight!\")\n",
         "\n",
         "    def simple_introduce(self):\n",
-        "      print(\"hello My name is \"+ self.name)"
+        "      print(\"hello My name is \"+ self.name)\n",
+        "\n",
+        "    def simple_introduce_2(self):\n",
+        "      return (\"hello My name is \"+ self.name+ \"  \\n\")\n",
+        "      ##return \"hello My name is \"+\n",
+        "\n",
+        "    def simple_introduce_3(self):\n",
+        "      return f\"{self.name} is my Name\"\n"
       ],
       "metadata": {
         "id": "rzt-X6hz0fWV"
       },
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -65,7 +72,7 @@
       "metadata": {
         "id": "cdlzazSq2t7o"
       },
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -79,9 +86,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S0S9pJKy3DLJ",
-        "outputId": "e9ee60a5-9c53-4742-9680-e3f8655fa480"
+        "outputId": "50fd23e6-37d5-47eb-a522-facdbd608066"
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,6 +99,123 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Person:\n",
+        "    def __init__(self, n, p, i):\n",
+        "        self.name = n\n",
+        "        self.personality = p\n",
+        "        self.isSitting = i\n",
+        "\n",
+        "    def linked_connection(self):\n",
+        "        print(\"My name is \" + self.name)"
+      ],
+      "metadata": {
+        "id": "XI-WEjcXHGNU"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p1 = Person(\"Alice\", \"aggressive\", False)\n",
+        "p2 = Person(\"Becky\", \"aggressive\", True)\n",
+        "\n",
+        "p1.robot_owned = DSK2\n",
+        "p2.robot_owned = DSK1"
+      ],
+      "metadata": {
+        "id": "j2B4jHdbHQL5"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "DSK1.simple_introduce()\n",
+        "p1.robot_owned.introduce_self()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Rbsx362mHiB4",
+        "outputId": "df9e9d10-296c-4fc1-9d37-f83539f93a71"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello My name is Tom\n",
+            "hello My name is Jerry, I'm in Blue colour and of 40Kg weight!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print (\"Or we can use\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iC7JYZj4IUHA",
+        "outputId": "5942647c-11c9-40f9-958f-f82ba16e9e36"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Or we can use\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "intro1 = DSK1.simple_introduce_2();\n",
+        "intro2 = DSK2.simple_introduce_3();\n",
+        "Combined_function_result = intro1 + intro2;\n",
+        "print(Combined_function_result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RPHfhH34IcMv",
+        "outputId": "50098bfe-2854-4b44-e480-e872e2eb0f8c"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello My name is Tom Test \n",
+            "Jerry is my Name\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vUjTPjCCI-uB"
+      },
+      "execution_count": 8,
+      "outputs": []
     }
   ]
 }
