--- a/004_Class_Objects_functions/Class_and_Objects.ipynb
+++ b/004_Class_Objects_functions/Class_and_Objects.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMHkI4P74PGz3t4urZ8Rw6T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,22 +44,21 @@
         "      self.weight = weight\n",
         "\n",
         "    def introduce_self(self) :\n",
-        "      print(\"hello My name is \"+ self.name+ \", I'm in \"+ self.colour+\" colour and of \"+self.weight + \"Kg weight!\")\n",
+        "      print(\"Hello I'm a Robot and My name is \"+ self.name+ \", I'm in \"+ self.colour+\" colour and of \"+self.weight + \"Kg weight!\")\n",
         "\n",
         "    def simple_introduce(self):\n",
-        "      print(\"hello My name is \"+ self.name)\n",
+        "      print(\"Hello I'm a Robot and  My name is\"+ self.name)\n",
         "\n",
         "    def simple_introduce_2(self):\n",
-        "      return (\"hello My name is \"+ self.name+ \"  \\n\")\n",
-        "      ##return \"hello My name is \"+\n",
+        "      return (\"Hello I'm a Robot My name is \"+ self.name+ \"  \\n\")\n",
         "\n",
         "    def simple_introduce_3(self):\n",
-        "      return f\"{self.name} is my Name\"\n"
+        "      return f\"{self.name} is my Name and I'm a Robot\"\n"
       ],
       "metadata": {
         "id": "rzt-X6hz0fWV"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -72,7 +70,7 @@
       "metadata": {
         "id": "cdlzazSq2t7o"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -88,7 +86,7 @@
         "id": "S0S9pJKy3DLJ",
         "outputId": "50fd23e6-37d5-47eb-a522-facdbd608066"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,7 +113,7 @@
       "metadata": {
         "id": "XI-WEjcXHGNU"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -130,7 +128,7 @@
       "metadata": {
         "id": "j2B4jHdbHQL5"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -146,7 +144,7 @@
         "id": "Rbsx362mHiB4",
         "outputId": "df9e9d10-296c-4fc1-9d37-f83539f93a71"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -170,7 +168,7 @@
         "id": "iC7JYZj4IUHA",
         "outputId": "5942647c-11c9-40f9-958f-f82ba16e9e36"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,7 +194,7 @@
         "id": "RPHfhH34IcMv",
         "outputId": "50098bfe-2854-4b44-e480-e872e2eb0f8c"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,7 +212,7 @@
       "metadata": {
         "id": "vUjTPjCCI-uB"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     }
   ]
