--- a/004_Class_Objects_functions/Class_and_Objects.ipynb
+++ b/004_Class_Objects_functions/Class_and_Objects.ipynb
@@ -47,7 +47,7 @@
         "      print(\"Hello I'm a Robot and My name is \"+ self.name+ \", I'm in \"+ self.colour+\" colour and of \"+self.weight + \"Kg weight!\")\n",
         "\n",
         "    def simple_introduce(self):\n",
-        "      print(\"Hello I'm a Robot and  My name is\"+ self.name)\n",
+        "      print(\"Hello I'm a Robot and  My name is \"+ self.name)\n",
         "\n",
         "    def simple_introduce_2(self):\n",
         "      return (\"Hello I'm a Robot My name is \"+ self.name+ \"  \\n\")\n",
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "rzt-X6hz0fWV"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -70,7 +70,7 @@
       "metadata": {
         "id": "cdlzazSq2t7o"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -84,16 +84,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S0S9pJKy3DLJ",
-        "outputId": "50fd23e6-37d5-47eb-a522-facdbd608066"
+        "outputId": "b727999c-14d6-4e57-82ae-c2df70b5917d"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "hello My name is Tom, I'm in Red colour and of 30Kg weight!\n",
-            "hello My name is Jerry\n"
+            "Hello I'm a Robot and My name is Tom, I'm in Red colour and of 30Kg weight!\n",
+            "Hello I'm a Robot and  My name isJerry\n"
           ]
         }
       ]
@@ -113,7 +113,7 @@
       "metadata": {
         "id": "XI-WEjcXHGNU"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -128,7 +128,7 @@
       "metadata": {
         "id": "j2B4jHdbHQL5"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -142,16 +142,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Rbsx362mHiB4",
-        "outputId": "df9e9d10-296c-4fc1-9d37-f83539f93a71"
+        "outputId": "e28460b4-2f28-450a-9eb3-24670a6653e6"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "hello My name is Tom\n",
-            "hello My name is Jerry, I'm in Blue colour and of 40Kg weight!\n"
+            "Hello I'm a Robot and  My name isTom\n",
+            "Hello I'm a Robot and My name is Jerry, I'm in Blue colour and of 40Kg weight!\n"
           ]
         }
       ]
@@ -166,9 +166,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iC7JYZj4IUHA",
-        "outputId": "5942647c-11c9-40f9-958f-f82ba16e9e36"
+        "outputId": "2f3c6889-2904-4cdd-8de1-355057f76e72"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,28 +192,46 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RPHfhH34IcMv",
-        "outputId": "50098bfe-2854-4b44-e480-e872e2eb0f8c"
+        "outputId": "71b6cef6-2c5d-48f3-8fc5-4ada6b64b38d"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "hello My name is Tom Test \n",
-            "Jerry is my Name\n"
+            "Hello I'm a Robot My name is Tom  \n",
+            "Jerry is my Name and I'm a Robot\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "p1.linked_connection()\n",
+        "p1.robot_owned.simple_introduce()\n",
+        "p2.robot_owned.introduce_self()\n"
+      ],
       "metadata": {
-        "id": "vUjTPjCCI-uB"
+        "id": "vUjTPjCCI-uB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "638369e0-8c47-4e1e-b1b9-91942e6191ef"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "My name is Alice\n",
+            "Hello I'm a Robot and  My name isJerry\n",
+            "Hello I'm a Robot and My name is Tom, I'm in Red colour and of 30Kg weight!\n"
+          ]
+        }
+      ]
     }
   ]
 }
